Ensures consistent thumbnail aspect ratio
The previous implementation could lead to distorted thumbnails
if the image dimensions were not square.

This change adds `aspect-ratio: attr(width) / attr(height)` to
the thumbnail image style to ensure a consistent aspect ratio,
preventing image distortion.

--- a/src/components/template/List/ListItem/ListItemThumbnail.module.scss
+++ b/src/components/template/List/ListItem/ListItemThumbnail.module.scss
@@ -13,6 +13,7 @@
     & img {
       width: 55px;
       height: 55px;
+      aspect-ratio: attr(width) / attr(height);
       border-radius: 50%;
       border: 1px solid #eee;
     }
